2011-09-19 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libio/adc/adcopen.c:
	  suppress 'pcfg unused' compiler warning

	* device/lib/pic16/Makefile.common
	  device/non-free/lib/pic16/Makefile.common:
	  move -Ipath to AM_CPPFLAGS for use by depmod

	* device/lib/pic16/configure.ac,
	  device/non-free/lib/pic16/configure.ac:
	  add --enable-new-pics switch to build support libs for devices added
	  to gputils only after the 0.13.7 release; by default, only libs for
	  devices that are supported in gputils 0.13.7 are built to avoid build
	  failures

	* device/lib/pic16/libio/Makefile.am,
	  device/non-free/lib/pic16/libdev/Makefile.am:
	  honor --enable-new-pics switch to include/exclude certain devices

	* doc/sdccman.lyx:
	  document the new configure switch

	* device/lib/pic16/Makefile.in,
	* device/lib/pic16/aclocal.m4,
	* device/lib/pic16/configure,
	* device/lib/pic16/debug/Makefile.in,
	* device/lib/pic16/libc/Makefile.in,
	* device/lib/pic16/libio/Makefile.in,
	* device/lib/pic16/libm/Makefile.in,
	* device/lib/pic16/libsdcc/Makefile.in,
	* device/lib/pic16/startup/Makefile.in,
	* device/non-free/lib/pic16/Makefile.in,
	* device/non-free/lib/pic16/aclocal.m4,
	* device/non-free/lib/pic16/configure,
	* device/non-free/lib/pic16/libdev/Makefile.in:
	  regenerated

2011-09-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genFunction),
	* src/mcs51/gen.c (genFunction): handle function pointers, fixed bug 3410620
	* src/SDCCsymt.c (compareFuncType): check regbank for non-isr,
	  (dbuf_printTypeChain): print reentrancy, register bank & bankswitching
	* src/SDCCsymt.h: removed unused & buggy IFFUNC_RBANK
	* support/Util/dbuf.c (dbuf_set_length): auto-init dbuf
	* support/regression/tests/bug3410620.c: new, added

2011-09-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  support/regression/tests/bug3410878.c:
	  Fixed bug #3410878.

2011-09-18 Maarten Brock <sourceforge.brock AT dse.nl>
